Update dev dependencies, use MapLibre references in README

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "potpack": "^1.0.1"
   },
   "devDependencies": {
-    "rollup": "^2.33.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "rollup": "^2.33.2"
   }
 }
